--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,56 @@
+html {
+  font-family: "Open Sans", sans-serif;
+  width: 100vw;
+}
+
+strong {
+  color: rgb(109, 77, 159);
+}
+a {
+  color: black;
+}
+h1 {
+  font-size: 5em;
+  margin: auto;
+}
+
+h2 {
+  font-size: 1.5em;
+  line-height: 1.75em;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+}
+.header-text {
   color: white;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.purple-blue {
+  height: 70vh;
+  background: linear-gradient(90deg, rgb(109, 77, 159), rgb(0, 191, 217));
+  display: flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.meantime {
+  max-width: 70%;
+  text-align: center;
+  margin: auto;
+}
+.footer {
+  background: #d3d2d2;
+  text-align: right;
+  height: 80px;
+  display: flex;
+}
+.footer-text {
+  font-size: 0.8em;
+  margin: auto;
+  color: black;
+}
+ion-icon {
+  font-size: 3em;
+  padding: 20px;
 }
